# COMP9242

./: Execution Model.md  IO subsystem.md  Memory Subsystem.md  Process Management.md  README.md  reset.sh
doc/: Execution Model.md  Memory Subsystem.md  Process Management.md  Swapping.md  Syscall.md  doc.md
libnfs/include/nfsc/: libnfs.h
projects/aos/: CMakeLists.txt
projects/aos/apps/helloworld/: CMakeLists.txt
projects/aos/apps/helloworld/src/: helloworld.c
projects/aos/apps/sosh/src/: benchmark.c  sosh.c
projects/aos/apps/test/: CMakeLists.txt
projects/aos/apps/test_2/: CMakeLists.txt
projects/aos/apps/test_2/src/: test_2.c
projects/aos/apps/tt/: CMakeLists.txt
projects/aos/apps/tt/src/: tt.c
projects/aos/apps/tty_test/src/: tty_test.c  ttyout.c
projects/aos/libclock/: CMakeLists.txt
projects/aos/libclock/include/clock/: clock.h
projects/aos/libclock/src/: clock.c
projects/aos/libserial/src/: serial.c
projects/aos/libsosapi/include/: sos.h  syscalls.h
projects/aos/libsosapi/src/: sos.c  sys_morecore.c  sys_stdio.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: addrspace.c  addrspace.h  bootstrap.c  bootstrap.h  elf.c  elfload.h  file_syscalls.c  filesyscall.c  filetable.c  filetable.h  frametable.c  frametable.h  main.c  mapping.c  mapping.h  network.c  openfile.c  openfile.h  pagetable.c  pagetable.h  proc.c  proc.h  swap.c  syscall.c  syscall.h  timesyscall.c  ut.c
projects/aos/sos/src/nfs/: nfs.c  nfs.h  (+1 more)
projects/libpicoro/: CMakeLists.txt  Kbuild  Kconfig  Makefile
projects/libpicoro/src/: picoro.c
(+32 files in other folders)
